tests/fixtures/head/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
spec:
  parentRefs:
    - name: envoy-gateway
