tests/fixtures/head/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: envoy
    spec:
      containers:
        - image: envoyproxy/envoy:v1.18-latest
  strategy:
    canary:
      maxUnavailable: 0
      maxSurge: 1
