tests/fixtures/head/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  selector:
      app.kubernetes.io/name: echoserver
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
